--- a/package.json
+++ b/package.json
@@ -1,10 +1,20 @@
 {
   "name": "13k_2021",
   "version": "0.0.1",
+  "scripts": {
+    "build": "webpack",
+    "start": "webpack serve --open"
+  },
   "dependencies": {
     "kontra": "^7.1.3"
   },
   "devDependencies": {
-    "prettier": "^2.3.2"
+    "css-loader": "^6.2.0",
+    "html-webpack-plugin": "^5.3.2",
+    "prettier": "^2.3.2",
+    "style-loader": "^3.2.1",
+    "webpack": "^5.51.1",
+    "webpack-cli": "^4.8.0",
+    "webpack-dev-server": "^4.0.0"
   }
 }
