--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "css-loader": "^6.2.0",
     "html-webpack-plugin": "^5.3.2",
     "prettier": "^2.3.2",
+    "sass": "^1.38.2",
+    "sass-loader": "^12.1.0",
     "style-loader": "^3.2.1",
     "webpack": "^5.51.1",
     "webpack-cli": "^4.8.0",
