--- a/package.json
+++ b/package.json
@@ -2,24 +2,26 @@
   "name": "13k_2021",
   "version": "0.0.1",
   "scripts": {
-    "build": "webpack --config webpack.prod.config.js",
-    "build-dev": "webpack",
-    "start": "webpack serve --open"
+    "build": "npm rum clean && rollup -c",
+    "clean": "rimraf dist && mkdirp dist",
+    "start": "mkdirp out && rollup -c -w"
   },
   "dependencies": {
     "kontra": "^7.1.3"
   },
   "devDependencies": {
-    "css-loader": "^6.2.0",
-    "html-webpack-plugin": "^5.3.2",
+    "mkdirp": "^1.0.4",
     "prettier": "^2.3.2",
-    "sass": "^1.38.2",
-    "sass-loader": "^12.1.0",
-    "style-loader": "^3.2.1",
-    "terser-webpack-plugin": "^5.1.4",
-    "webpack": "^5.51.1",
-    "webpack-bundle-analyzer": "^4.4.2",
-    "webpack-cli": "^4.8.0",
-    "webpack-dev-server": "^4.0.0"
+    "rimraf": "^3.0.2",
+    "rollup": "^2.56.3",
+    "rollup-plugin-commonjs": "^10.1.0",
+    "rollup-plugin-html-bundle": "0.0.3",
+    "rollup-plugin-kontra": "^1.0.1",
+    "rollup-plugin-livereload": "^2.0.5",
+    "rollup-plugin-node-resolve": "^5.2.0",
+    "rollup-plugin-serve": "^1.1.0",
+    "rollup-plugin-styles": "^3.14.1",
+    "rollup-plugin-terser": "^7.0.2",
+    "sass": "^1.39.0"
   }
 }
