--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "rimraf": "^3.0.2",
     "rollup": "^2.56.3",
     "rollup-plugin-commonjs": "^10.1.0",
+    "rollup-plugin-copy": "^3.4.0",
     "rollup-plugin-html-bundle": "0.0.3",
     "rollup-plugin-kontra": "^1.0.1",
     "rollup-plugin-livereload": "^2.0.5",
